Extract common parts of Forge to common module